--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -49,6 +49,7 @@
         "slider_address_cannes": "Cannes, France",
         "slider_address_nice": "Nizza, Francia",
         "slider_title_full": "Appartamento con vista mare sulla Promenade des Anglais",
+        "slider_title_short": "Appartamento con vista mare",
         "slider_description": "Appartamento completamente ristrutturato con 3 camere da letto al 5 ° piano in una piccola residenza sulla famosa Promenade des Anglais.",
         "slider_more": "Altro",
         "slider_article": "Articolo",
@@ -123,5 +124,33 @@
         "footer_regions_villa-ferra": "Villa a Saint-Jean-Cap-Ferrat",
         "footer_regions_apartments-ezze": "Appartamenti a Eze",
         "footer_regions_apartments-ferra": "Appartamenti a Saint-Jean-Cap-Ferrat"
+    },
+
+    "about_first": {
+        "about_first_title": "Transazioni <br /> in russo <br /> con la tua proprietà in Francia <br /> dal 2017",
+        "about_first_description": "Stiamo aprendo nuovi orizzonti per la Francia. Sceglieremo la proprietà in base alle richieste espresse, forniremo la gestione dei tuoi appartamenti o forniremo un servizio di portineria, e hai solo una cosa da fare: goderti la vita.",
+        "about_first_button": "Scrivici"
+    },
+
+    "about_second": {
+        "about_second_title_first": "“Le persone benestanti",
+        "about_second_title_second": "vengono",
+        "about_second_title_last": "in Costa Azzurra per la tranquillità <br /> e persino la solitudine”"
+    },
+
+    "about_third": {
+        "about_third_title_title": "Specialisti di Azur Life",
+        "about_third_left_name": "Eva Sinibaldi",
+        "about_third_left_post": "Broker",
+        "about_third_left_description": "Specializzazione: Gestione immobiliare <br /> esame: valutazione immobiliare, <br /> domande sui visti",
+        "about_third_right_name": "Natalia Vinogradova",
+        "about_third_right_post": "Fondatore dell'agenzia",
+        "about_third_right_description": "Specializzazione: vendita <br /> e affitto di immobili in Francia. <br /> esame: diritto di proprietà, tasse < br / > e questioni relative ai visti"
+    },
+
+    "about_fourth": {
+        "about_fourth_title": "Esame dell'agenzia",
+        "about_fourth_description": "Your Life è un'agenzia dinamica che sostiene i valori della privacy, della lealtà, dell'eccellenza e dell'individualità dal 2017. Abbiamo tutte le licenze necessarie, le assicurazioni e le garanzie finanziarie richieste dalla legge francese per condurre la tua transazione immobiliare nel modo più efficiente e confortevole possibile.",
+        "about_fourth_button": "Acquista o vendi con noi"
     }
 }
