--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -149,6 +149,22 @@
         "about_fourth_title": "Экспертиза агентства",
         "about_fourth_description": "Azur Life - динамично развивающееся агентство, отстаивающее ценности конфиденциальности, лояльности, высокого профессионализма и индивидуального подхода с 2017 года. Мы имеем все необходимые лицензии, страховые и финансовые гарантии, требуемые французским законодательством для того, чтобы провести Вашу сделку по недвижимости максимально качественно и комфортно.",
         "about_fourth_button": "Купить или продать с нами"
+    }
+    ,
+
+    "objects_first": {
+        "objects_first_title": "Доступные объекты",
+        "objects_first_description": "Azur Life специализируется на премиум объектах недвижимости на всей территории Франции. Мы послужим медиатором любой сделки с элитной недвижимостью: купить, продать или арендовать апартаменты можно качественно и быстро."
+    },
+
+    "objects_second": {
+        "objects_second_title": "Продажа",
+        "objects_second_link": "Смотреть все объекты на продажу"
+    },
+
+    "objects_third": {
+        "objects_third_title": "Аренда",
+        "objects_third_link": "Смотреть все объекты в аренду"
     },
 
     "filter": {
