--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -149,9 +149,7 @@
         "about_fourth_title": "Экспертиза агентства",
         "about_fourth_description": "Azur Life - динамично развивающееся агентство, отстаивающее ценности конфиденциальности, лояльности, высокого профессионализма и индивидуального подхода с 2017 года. Мы имеем все необходимые лицензии, страховые и финансовые гарантии, требуемые французским законодательством для того, чтобы провести Вашу сделку по недвижимости максимально качественно и комфортно.",
         "about_fourth_button": "Купить или продать с нами"
-    }
-    ,
-
+    },
     "objects_first": {
         "objects_first_title": "Доступные объекты",
         "objects_first_description": "Azur Life специализируется на премиум объектах недвижимости на всей территории Франции. Мы послужим медиатором любой сделки с элитной недвижимостью: купить, продать или арендовать апартаменты можно качественно и быстро."
@@ -166,11 +164,40 @@
         "objects_third_title": "Аренда",
         "objects_third_link": "Смотреть все объекты в аренду"
     },
+    "sell_first": {
+        "sell_first_title": "Объекты на продажу",
+        "sell_first_description": "Осуществить покупку недвижимости во Франции можно легко: обратитесь к менеджерам Azur Life, чтобы урегулировать все административные формальности, связанные с приобретением собственности."
+    },
 
     "filter": {
+        "filter_title_sell": " на продажу",
+        "filter_title_rent": "  в аренду",
         "filter_title": "Объекты",
-        "filter_house_type_apartments": "apartments",
-        "filter_house_type_house": "house",
-        "filter_house_type_float": "float"
+        "filter_type": "Тип",
+        "filter_type_apartments": "Апартаменты",
+        "filter_type_house": "Дом",
+        "filter_type_float": "Квартира",
+        "filter_location": "Расположение",
+        "filter_location_cannes": "Канны, Франция",
+        "filter_location_nice": "Ницца, Франция",
+        "filter_location_other": "Другие",
+        "filter_location_all": "Все",
+        "filter_sort": "Сортировать по",
+        "filter_sort_price_asc": "По цене (возрастанию)",
+        "filter_sort_price_desc": "По цене (убыванию)",
+        "filter_sort_area_asc": "По площади (возрастанию)",
+        "filter_sort_area_desc": "По площади (убыванию)",
+        "filter_title_full": "Апартаменты с видом на море на Английской набережной",
+        "filter_description_full": "Полностью отремонтированная 3-комнатная квартира на 5 этаже в небольшой резиденции на знаменитой Английской набережной.",
+        "filter_choice": "Выбор <br /> Azur Life",
+        "filter_exclusive": "Эксклюзивно <br /> в Azur Life",
+        "filter_view_object": "Смотреть объект",
+        "filter_view_nothing": "Ничего не найдено"
+    },
+
+    "rent_first": {
+        "rent_first_title": "Аренда",
+        "rent_first_title_second": "на Лазурном берегу",
+        "rent_first_description": "Арендовать недвижимость на сезон или выбрать что-то на долгосрочный период можно легко. <br /> Azur Life предоставляет опцию полного сопровождения сделки аренды. Мы выберем премиальные виллы и апартаменты под Ваш запрос без комиссии и дополнительных наценок."
     }
 }
