--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -204,5 +204,11 @@
         "rent_first_title": "Location",
         "rent_first_title_second": "Sur la côte d'Azur",
         "rent_first_description": "Il est facile de Louer une propriété pour la saison ou de choisir quelque chose pour la période à long terme. <br /> Azur Life offre une option de suivi complet de la transaction de location. Nous choisirons des villas et des appartements haut de gamme à Votre demande, sans Commission ni frais supplémentaires."
+    },
+
+    "blog_first": {
+        "blog_first_title": "Blog",
+        "blog_text_first": "Située sur les pentes du Cap Ferrat, dans un endroit isolé avec une vue imprenable sur la mer et à quelques minutes à pied du village et du port de Saint-Jean-Cap-Ferrat, cette Villa est l'une des propriétés les plus convoitées de cette partie de la côte d'Azur.Moderne et ouverte, la Villa offre des conditions idéales pour la détente et le divertissement. De grandes fenêtres en verre et des portes coulissantes inondent les chambres de lumière naturelle, offrant une vue magnifique sur la mer. Avec une surface habitable de 1 000 m2 répartie sur quatre étages et desservie par un ascenseur en verre, il y a suffisamment d'espace pour organiser des événements ou trouver un coin tranquille pour se détendre. La Villa dispose de cinq chambres luxueuses avec salle de bains privée et peut accueillir confortablement jusqu'à 10 personnes.",
+        "blog_text_second": "Toutes les chambres disposent d'espaces de détente, de belles salles de bains et de systèmes de divertissement Bang & Olufsen. La septième chambre double est réservée au personnel."
     }
 }
