--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -205,5 +205,11 @@
         "blog_first_title": "Блог",
         "blog_text_first": "Расположенная на склонах Кап Ферра в уединенном месте с захватывающим видом на море и в то же время всего в нескольких минутах ходьбы от деревни и гавани Сен-Жан-Кап-Ферра, эта вилла является одним из самых желанных объектов недвижимости на этом участке Французской Ривьеры.Современная и открытая планировка, вилла предлагает идеальные условия как для отдыха, так и для развлечений. Большие стеклянные окна и раздвижные двери наполняют комнаты естественным светом, обеспечивая гостям великолепный вид на море. С жилой площадью 1000 м2, расположенной на четырех этажах и обслуживаемой стеклянным лифтом, здесь достаточно места для проведения мероприятий или поиска тихого уголка для отдыха. Вилла располагает пятью роскошными спальнями с отдельными ванными комнатами и способна с комфортом разместить до 10 гостей.",
         "blog_text_second": "Во всех номерах есть зоны отдыха, красивые ванные комнаты и развлекательные системы Bang & Olufsen. Седьмая спальня с двуспальной кроватью предназначена для персонала."
+    },
+
+    "join_first": {
+        "join_first_title": "Присоединиться <br /> к Azur Life",
+        "join_first_subtitle": "Azur Life",
+        "join_first_description": "Станьте участником Azur Life. Заполните форму ниже, что бы мы могли узнать вас получше."
     }
 }
